Update tests
MqttBridgeTest : Update to the last Session API

HTTP: Use the already embedded Base64 encoder

TestRestACTAccess - cosmetic: fix the test name